[gd_scene load_steps=21 format=2]

[ext_resource path="res://Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://assets/Sprites/Dag/Fire1.png" type="Texture" id=2]
[ext_resource path="res://assets/Sprites/Dag/Fall0.png" type="Texture" id=3]
[ext_resource path="res://assets/Sprites/Dag/Jump0.png" type="Texture" id=4]
[ext_resource path="res://assets/Sprites/Dag/Run3.png" type="Texture" id=5]
[ext_resource path="res://assets/Sprites/Dag/Run1.png" type="Texture" id=6]
[ext_resource path="res://assets/Sprites/Dag/Run2.png" type="Texture" id=7]
[ext_resource path="res://assets/Sprites/Dag/Idle0.png" type="Texture" id=8]
[ext_resource path="res://assets/Sprites/Dag/Run4.png" type="Texture" id=9]
[ext_resource path="res://assets/Sprites/Dag/Run5.png" type="Texture" id=10]
[ext_resource path="res://assets/Sprites/Dag/Run0.png" type="Texture" id=11]
[ext_resource path="res://assets/Sprites/Dag/Fire0.png" type="Texture" id=12]
[ext_resource path="res://assets/Sprites/Dag/Fire2.png" type="Texture" id=13]
[ext_resource path="res://assets/sound and music/Sounds/jumpsound.mp3" type="AudioStream" id=14]
[ext_resource path="res://assets/sound and music/Sounds/run1.mp3" type="AudioStream" id=15]
[ext_resource path="res://assets/sound and music/Sounds/fallsound.mp3" type="AudioStream" id=16]
[ext_resource path="res://assets/sound and music/Sounds/hurtsound.mp3" type="AudioStream" id=17]
[ext_resource path="res://assets/sound and music/Sounds/fireballwhoosh.mp3" type="AudioStream" id=18]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "fall",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 2 ), ExtResource( 13 ) ],
"loop": true,
"name": "fire",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 5 ), ExtResource( 9 ), ExtResource( 10 ) ],
"loop": true,
"name": "run",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=4]
radius = 14.0
height = 29.0

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 3 )
animation = "fire"
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 4 )
shape = SubResource( 4 )

[node name="jumpFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 14 )

[node name="runFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 15 )
volume_db = -15.0
pitch_scale = 0.75

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="fallFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 16 )
volume_db = -10.0
max_distance = 100000.0

[node name="hurtFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 17 )

[node name="fallTimer" type="Timer" parent="."]
wait_time = 3.83

[node name="pieTimer" type="Timer" parent="."]

[node name="l2pietimer" type="Timer" parent="."]

[node name="fireFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 18 )
volume_db = -12.0

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="fallTimer" to="." method="_on_fallTimer_timeout"]
[connection signal="timeout" from="pieTimer" to="." method="_on_pieTimer_timeout"]
[connection signal="timeout" from="l2pietimer" to="." method="_on_l2pietimer_timeout"]
